--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>Space Invader Game</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    canvas {
+      cursor: none;
+    }
+  </style>
 </head>
 <body>
   <script src="lib/rx.all.js"></script>
